# ocr-enhanced-projec

./: .coveragerc  .gitignore  AUTOMATION_SUMMARY.md  CLAUDE.md  DISTRIBUTION.md  DISTRIBUTION_SUMMARY.md  Makefile  OCR_Enhanced_Hybrid_v1.py  OCR_Enhanced_with_Local_Processing.py  OCR_Enhanced_with_Searchable_PDF.py  OCR_Enhanced_with_Searchable_PDF_REAL.py  README.md  README_API_KEY_MANAGER.md  SETUP_FOLDERS.md  TESTING_SUMMARY.md  api_key_manager.py  install_dependencies.sh  install_manual.sh  install_pdf_dependencies.sh  install_python_only.sh  pyproject.toml  requirements.txt  setup.cfg  test_api_integration.py  test_cache_system.py  test_hybrid_setup.py  test_image_preprocessing.py  test_integration_automation.py  test_multi_engine_basic.py  test_multi_engine_final.py  test_multi_engine_integration.py  test_ocr_setup.py  test_parallel_processing.py  test_preprocessing_simple.py  test_text_processing.py  test_xml_output.py
.github/workflows/: ci.yml
build_scripts/: build.py  build_executable.py  build_linux.sh  build_macos.sh  build_windows.bat  publish.py  release.py
requirements/: base.txt  dev.txt
scripts/: SCRIPT OCR - MISTRAL OCR  - requisicao direta http v6 grafico - atualizado - LOTES BATCH - v2 cm log aprimorado.PY
src/: __init__.py
src/automation/: __init__.py  automation_manager.py  email_integration.py  folder_watcher.py  rules.py  scheduler.py  templates.py  workflows.py
src/core/: __init__.py  config.py
src/gui/: __init__.py  automation_controls.py  backup_interface.py  dashboard.py  main_window.py  search_interface.py  themes.py  workflow_editor.py
src/mcp/: __init__.py  backup_manager.py  search_manager.py  semantic_search.py  workflow_manager.py
src/ocr/: __init__.py  azure_vision.py  base.py  google_vision.py  mistral_engine.py  multi_engine.py  tesseract_engine.py
src/utils/: __init__.py  cache_manager.py  image_processor.py  logger.py  parallel_processor.py  quality_detector.py  text_processor.py  xml_output_generator.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_file_processing.py  test_system.py  test_workflow.py
tests/unit/: __init__.py  test_config.py  test_logger.py  test_ocr_base.py
