[metadata]
name = ocr-enhanced
version = attr: src.__version__

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .tox,
    .pytest_cache
per-file-ignores =
    __init__.py:F401
    tests/*:S101,D

[pylint]
load-plugins = pylint.extensions.docparams
max-line-length = 88
disable = 
    C0103,  # Invalid name
    R0903,  # Too few public methods
    R0913,  # Too many arguments

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests